UP: CRUD Scaffolding

--- a/SalesWebMvc/appsettings.json
+++ b/SalesWebMvc/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SalesWebMvcContext": "Server=(localdb)\\mssqllocaldb;Database=SalesWebMvcContext-df8b86f5-ab6c-44be-aacb-61a22e00e7d2;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
