--- a/SalesWebMvc/appsettings.json
+++ b/SalesWebMvc/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SalesWebMvcContext": "Server=(localdb)\\mssqllocaldb;Database=SalesWebMvcContext-df8b86f5-ab6c-44be-aacb-61a22e00e7d2;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "SalesWebMvcContext": "server=127.0.0.1;userid=root;password=;database=salesmvc"
   }
 }
